<resources>
    <string name="app_name" translatable="false">Condor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sncf" translatable="false">SNCF</string>
    <string name="optymo" translatable="false">Optymo</string>
    <string name="others">Other</string>
    <string name="settings">Settings</string>
    <string name="transport_info">Transport info</string>
    <string name="canteen">Canteen</string>
    <string name="absences">Absences</string>
    <string name="news">News</string>
    <string name="high_school">High School</string>
    <string name="search">Search</string>
    <string name="canteen_menu">Canteen menu</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="cat_select">Select categories</string>
    <string name="sync_notif_name">Condor synchronization</string>
    <string name="sync_end">Synchronization ended</string>
    <string name="teachers_absences">Teacher absences</string>
    <string name="teacher">Teacher</string>
    <string name="date">Date</string>
    <string name="morning">AM</string>
    <string name="afternoon">PM</string>
    <string name="sync_app_start">Sync the database when app starts.</string>
    <string name="sync_app_start_title">Sync at start</string>
    <string name="sync_mobile_data">Use mobile data to get content.</string>
    <string name="sync_mobile_data_title">Mobile data</string>
    <string name="select_language_title">Select language</string>
    <string name="language">Language</string>
    <string name="end_sync_ticker">Sync ended</string>
    <string name="sync_start_ticker">Sync started</string>
    <string name="sync_forbidden">Your settings don\'t allow syncing or you don\'t have internet connection.</string>
    <string name="sync_ready">Click to begin syncing</string>
    <string name="all_category">All</string>
    <string name="rss_display_summary">Display RSS feed from the high-school\'s official website.</string>
    <string name="rss_display_title">Show RSS</string>
    <string name="sync">Synchronization</string>
    <string name="to">" to "</string>
    <string name="from">"From "</string>
    <string name="female_title">Mrs</string>
    <string name="male_title">Mr</string>
    <string name="neutral_title">Mx</string>
    <string name="from_single_day">"From "</string>
    <string name="to_single_day">" to "</string>
    <string name="client_default">There are no email clients installed.</string>
    <string name="licenses">LICENSES</string>
    <string name="bug_send_feedback_here">Bug? Suggestion? Send feedback here!</string>
    <string name="home">Home</string>

    <string-array name="language_choose">
        <item>System language</item>
        <item>French</item>
        <item>English</item>
        <item>German</item>
    </string-array>

    <string-array name="language_choose_values">
        <item>default</item>
        <item>fr</item>
        <item>en</item>
        <item>de</item>
    </string-array>
    <string name="help">Help</string>
    <string name="maps">Maps</string>
    <string name="floor">Floor</string>
    <string name="from_building">" from building "</string>
    <string name="where">"Where: "</string>
    <string name="when">"When: "</string>
    <string name="events">Events</string>
    <string name="from_the">"The "</string>
    <string name="event">Event</string>
    <string name="tomorrow">"Tomorrow at "</string>
    <string name="began">"Began on "</string>
    <string name="date_format">dd/MM</string>
    <string name="hour_format">HH:mm</string>
    <string name="new_content">New content is available for downloading</string>
    <string name="click_sync">Click to sync</string>
    <string name="at">" at "</string>
    <string name="cvl" translatable="false">CVL</string>
    <string name="sync_firebase">Sync when notified</string>
    <string name="sync_firebase_more">Automatically sync when an update is available.</string>
    <string name="error">Error</string>
    <string name="plan_choice">Select a plan</string>
    <string name="cgu">GTU</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://app.cvlcondorcet.fr\",\n  }\n}]</string>
    <string name="plan">MAP</string>
    <string name="decline">DECLINE</string>
    <string name="accept">AGREE</string>
    <string name="new_content_toread">New content!</string>
    <string name="new_posts">New posts</string>
    <string name="new_events">New events</string>
    <string name="new_cvl">New on the CVL</string>
    <string name="new_maps">New places</string>
    <string name="new_canteen">New canteen menu!</string>
    <string name="drop_to_see">Pull down to see more</string>
    <string name="continued">Continue</string>
    <string name="content">Content</string>
    <string name="your_data">Your data</string>
    <string name="delete_unique">Delete the unique id</string>
    <string name="export_data">Export my data</string>
    <string name="see_data">See my data</string>
    <string name="crash_data">Crash data</string>
    <string name="stats_data">Statistical data</string>
    <string name="stats_data_summary">Sending of analytics data for the app\'s editor</string>
    <string name="crash_data_summary">Sending of crash reports to app\'s editor.</string>
    <string name="delete_summary">Delete all your information.</string>
    <string name="end_sync"><![CDATA[<p style=\"text-align: justify;\">Thank you for the confidence you have placed in us.</p><br/><strong>We are now syncing the last elements!</strong>]]></string>
    <string name="need_data"><![CDATA[<p style=\"text-align: justify;\">We need your data. If you nevertheless still want to delete them, continue.</p>]]></string>
    <string name="data_copied">Your data has been exported in the clipboard.</string>
    <string name="copy_error">We regret that we can\'t export your data. Please contact the DPO.</string>
    <string name="condor_end"><![CDATA[<p style=\"text-align: justify;\">You are about to give up on using Condor. If you continue, <strong>all your data</strong>will be deleted according to the conditions you have previously accepted.</p>]]></string>
    <string name="first_window"><![CDATA[<p style=\"text-align: justify;\">Condor was successfully installed and we thank you.</p><br/><strong>To use Condor, we however need your consent!</strong>]]></string>
    <string name="gtu_accept">I hereby accept the terms and conditions.</string>
    <string name="conf_accept">"I hereby accept this privacy policy. "</string>
    <string name="stats_accept">I hereby accept the transmission of statistic data to the MDL of the Lycée Condorcet.</string>
    <string name="crash_accepts">I hereby accept the transmission of crash data to the MDL of the Lycée Condorcet.</string>
    <string name="congrats">Congratulations!</string>
    <string name="new_posts_one">New post :</string>
    <string name="new_events_one">New event :</string>
    <string name="conf">Privacy Policy</string>
    <string name="sync_notification_name">Sync notification</string>
    <string name="sync_summary_notif">Notification that displays the new content.</string>
    <string name="clear_notif_title">Clear all notifications</string>
    <string name="clear_notif_summary">Remove all notifications within the app.</string>
    <string name="clear_notif_done">Notifications cleared.</string>
    <string name="in_a_week">"In a weekn, on the "</string>
    <string name="today">"Today at "</string>
    <string name="mark_as_seen">Mark as seen</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="share_condor">Share Condor</string>
    <string name="enjoyr_condor">You\'re enjoying Condor? What about sharing it with your friends?!</string>
    <string name="recommendation">Let me recommend you Condor!</string>
    <string name="discover_condor">Discover Condor! https://app.cvlcondorcet.fr</string>
    <string name="gtu_share">See our GTU on Condor! https://app.cvlcondorcet.fr/mentions/</string>
    <string name="events_share">See all events on Condor! https://app.cvlcondorcet.fr/events/</string>
    <string name="posts_share">See all news on Condor! https://app.cvlcondorcet.fr/posts/</string>
    <string name="canteen_shares">Check our canteen menu on Condor! https://app.cvlcondorcet.fr/canteen/</string>
    <string name="cvl_share">Discover more about our CVL on Condor! https://app.cvlcondorcet.fr/cvl/</string>
    <string name="meet_up_here">Meet up here! https://app.cvlcondorcet.fr/maps/</string>
    <string name="maps_share">Discover Condor\'s maps! https://app.cvlcondorcet.fr/maps/</string>
    <string name="look_post_out">Look at this post!\n</string>
    <string name="look_posts_condor">Look at this post in Condor! https://app.cvlcondorcet.fr/posts/</string>
    <string name="look_event_share">Look at this event in Condor! https://app.cvlcondorcet.fr/events/</string>
</resources>
